<resources>
    <string name="app_name">TheaterAdmin</string>

    <string name="add_movie">Add Movie</string>
    <string name="about_movie">About the movie</string>
    <string name="bannerUrl">Banner image Url</string>
    <string name="coverUrl">Cover image Url</string>
    <string name="lang">Movie languages</string>
    <string name="duration">Duration</string>
    <string name="mname">Movie name</string>
    <string name="rdate">Release date</string>
    <string name="add">Add New Movie</string>
    <string name="update">View/Update Movie</string>
    <string name="theater">Theater Admin App</string>
    <string name="theater_user">Add Movie In Online Movie Booking User App</string>
    <string name="fetch">Fetch</string>
    <string name="btnadd">Add</string>
    <string name="insert">Insert</string>
    <string name="movie_name">Movie Name:</string>
    <string name="loading">Loading...</string>
    <string name="order">Order History</string>
</resources>