<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/theater"
            android:fontFamily="@font/manrope_extrabold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theater_user"
            android:fontFamily="@font/manrope_regular"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvInsert"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/insert"
                        android:background="@drawable/ic_add" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightgray" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textAllCaps="false"
                        android:fontFamily="@font/manrope_bold"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFetch"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                >
                <!---->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <!---->
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/fetch"
                        android:background="@drawable/ic_update" />
                    <!---->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightgray" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:textSize="14sp"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:fontFamily="@font/manrope_bold"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:clipToPadding="false"-->
<!--            android:padding="10dp"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal">-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/cvOrder"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="180dp"-->
<!--                android:layout_margin="10dp"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                android:foreground="?android:attr/selectableItemBackground"-->
<!--                >-->
<!--                &lt;!&ndash;&ndash;&gt;-->
<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:gravity="center"-->
<!--                    android:orientation="vertical">-->
<!--                    &lt;!&ndash;&ndash;&gt;-->
<!--                    <ImageView-->
<!--                        android:layout_width="50dp"-->
<!--                        android:layout_height="50dp"-->
<!--                        android:contentDescription="@string/fetch"-->
<!--                        android:background="@drawable/ic_history" />-->
<!--                    &lt;!&ndash;&ndash;&gt;-->
<!--                    <View-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="1dp"-->
<!--                        android:layout_margin="10dp"-->
<!--                        android:background="@color/lightgray" />-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/order"-->
<!--                        android:textSize="14sp"-->
<!--                        android:textAllCaps="false"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:fontFamily="@font/manrope_bold"-->
<!--                        />-->
<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

<!--        </LinearLayout>-->


    </LinearLayout>


</ScrollView>
